// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features vs umis plot picks correct linesData point if prediction interval is 0.999999 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega/v5.json",
  "autosize": {
    "resize": true,
    "type": "fit",
  },
  "axes": [
    {
      "domain": false,
      "grid": true,
      "gridOpacity": 0.5,
      "labelAlign": "center",
      "labelAngle": 0,
      "labelFont": "sans-serif",
      "labelFontSize": 12,
      "offset": 0,
      "orient": "bottom",
      "scale": "x",
      "tickCount": 5,
      "title": "log10 [molecule counts]",
      "titleFont": "sans-serif",
      "titleFontSize": 13,
      "zindex": 1,
    },
    {
      "domain": false,
      "grid": true,
      "gridOpacity": 0.5,
      "labelFont": "sans-serif",
      "labelFontSize": 12,
      "offset": 0,
      "orient": "left",
      "scale": "y",
      "title": "log10 [gene counts]",
      "titleFont": "sans-serif",
      "titleFontSize": 13,
      "titlePadding": 5,
      "zindex": 1,
    },
  ],
  "data": [
    {
      "format": {
        "copy": true,
        "type": "json",
      },
      "name": "pointsData",
      "transform": [
        {
          "expr": "datum['log_genes'] != null && datum['log_molecules'] != null",
          "type": "filter",
        },
        {
          "expr": "datum.log_genes >= 1.7545782168801844 && datum.log_genes <= 4.438242783119816",
          "type": "filter",
        },
      ],
      "values": [
        {
          "log_genes": 2.515874,
          "log_molecules": 2.69897,
        },
        {
          "log_genes": 2.390935,
          "log_molecules": 2.699838,
        },
        {
          "log_genes": 2.369216,
          "log_molecules": 2.701568,
        },
        {
          "log_genes": 1.544068,
          "log_molecules": 2.701568,
        },
        {
          "log_genes": 2.409933,
          "log_molecules": 2.703291,
        },
        {
          "log_genes": 2.501059,
          "log_molecules": 2.706718,
        },
        {
          "log_genes": 2.495544,
          "log_molecules": 2.71265,
        },
        {
          "log_genes": 2.376577,
          "log_molecules": 2.713491,
        },
        {
          "log_genes": 2.296665,
          "log_molecules": 2.716838,
        },
        {
          "log_genes": 2.474216,
          "log_molecules": 2.716838,
        },
        {
          "log_genes": 2.494155,
          "log_molecules": 2.723456,
        },
        {
          "log_genes": 1.633468,
          "log_molecules": 2.727541,
        },
        {
          "log_genes": 2.509203,
          "log_molecules": 2.730782,
        },
        {
          "log_genes": 2.419956,
          "log_molecules": 2.730782,
        },
        {
          "log_genes": 2.444045,
          "log_molecules": 2.733999,
        },
        {
          "log_genes": 2.348305,
          "log_molecules": 2.736397,
        },
        {
          "log_genes": 2.565848,
          "log_molecules": 2.739572,
        },
        {
          "log_genes": 2.320146,
          "log_molecules": 2.750508,
        },
        {
          "log_genes": 2.521138,
          "log_molecules": 2.750508,
        },
        {
          "log_genes": 1.968483,
          "log_molecules": 2.754348,
        },
        {
          "log_genes": 1.591065,
          "log_molecules": 2.761176,
        },
        {
          "log_genes": 2.503791,
          "log_molecules": 2.764176,
        },
        {
          "log_genes": 2.431364,
          "log_molecules": 2.768638,
        },
        {
          "log_genes": 2.459392,
          "log_molecules": 2.775974,
        },
        {
          "log_genes": 2.385606,
          "log_molecules": 2.780317,
        },
        {
          "log_genes": 2.466868,
          "log_molecules": 2.781037,
        },
        {
          "log_genes": 2.494155,
          "log_molecules": 2.782473,
        },
        {
          "log_genes": 2.491362,
          "log_molecules": 2.78533,
        },
        {
          "log_genes": 2.499687,
          "log_molecules": 2.788875,
        },
        {
          "log_genes": 2.558709,
          "log_molecules": 2.791691,
        },
        {
          "log_genes": 2.44248,
          "log_molecules": 2.79379,
        },
        {
          "log_genes": 2.603144,
          "log_molecules": 2.795185,
        },
        {
          "log_genes": 1.94939,
          "log_molecules": 2.795185,
        },
        {
          "log_genes": 2.555094,
          "log_molecules": 2.797268,
        },
        {
          "log_genes": 2.448706,
          "log_molecules": 2.798651,
        },
        {
          "log_genes": 2.440909,
          "log_molecules": 2.805501,
        },
        {
          "log_genes": 2.465383,
          "log_molecules": 2.806858,
        },
        {
          "log_genes": 2.445604,
          "log_molecules": 2.810904,
        },
        {
          "log_genes": 2.478566,
          "log_molecules": 2.812913,
        },
        {
          "log_genes": 2.570543,
          "log_molecules": 2.813581,
        },
        {
          "log_genes": 2.603144,
          "log_molecules": 2.818885,
        },
        {
          "log_genes": 2.40654,
          "log_molecules": 2.826723,
        },
        {
          "log_genes": 2.513218,
          "log_molecules": 2.82866,
        },
        {
          "log_genes": 2.414973,
          "log_molecules": 2.830589,
        },
        {
          "log_genes": 1.845098,
          "log_molecules": 2.83123,
        },
        {
          "log_genes": 2.463893,
          "log_molecules": 2.834421,
        },
        {
          "log_genes": 1.792392,
          "log_molecules": 2.835691,
        },
        {
          "log_genes": 2.459392,
          "log_molecules": 2.835691,
        },
        {
          "log_genes": 1.755875,
          "log_molecules": 2.839478,
        },
        {
          "log_genes": 1.770852,
          "log_molecules": 2.841985,
        },
        {
          "log_genes": 2.565848,
          "log_molecules": 2.844477,
        },
        {
          "log_genes": 1.799341,
          "log_molecules": 2.844477,
        },
        {
          "log_genes": 2.563481,
          "log_molecules": 2.845098,
        },
        {
          "log_genes": 1.732394,
          "log_molecules": 2.846337,
        },
        {
          "log_genes": 2.462398,
          "log_molecules": 2.850646,
        },
        {
          "log_genes": 1.643453,
          "log_molecules": 2.863323,
        },
        {
          "log_genes": 2.617,
          "log_molecules": 2.865104,
        },
        {
          "log_genes": 2.480007,
          "log_molecules": 2.867467,
        },
        {
          "log_genes": 2.372912,
          "log_molecules": 2.868644,
        },
        {
          "log_genes": 2.481443,
          "log_molecules": 2.869818,
        },
        {
          "log_genes": 2.647383,
          "log_molecules": 2.877947,
        },
        {
          "log_genes": 2.567026,
          "log_molecules": 2.880242,
        },
        {
          "log_genes": 2.582063,
          "log_molecules": 2.883093,
        },
        {
          "log_genes": 1.812913,
          "log_molecules": 2.883093,
        },
        {
          "log_genes": 2.434569,
          "log_molecules": 2.884795,
        },
        {
          "log_genes": 2.668386,
          "log_molecules": 2.888741,
        },
        {
          "log_genes": 2.716838,
          "log_molecules": 2.893762,
        },
        {
          "log_genes": 2.686636,
          "log_molecules": 2.89487,
        },
        {
          "log_genes": 2.478566,
          "log_molecules": 2.895423,
        },
        {
          "log_genes": 2.638489,
          "log_molecules": 2.905256,
        },
        {
          "log_genes": 2.553883,
          "log_molecules": 2.910091,
        },
        {
          "log_genes": 2.539076,
          "log_molecules": 2.91169,
        },
        {
          "log_genes": 1.913814,
          "log_molecules": 2.91698,
        },
        {
          "log_genes": 2.466868,
          "log_molecules": 2.917506,
        },
        {
          "log_genes": 2.683047,
          "log_molecules": 2.91803,
        },
        {
          "log_genes": 2.621176,
          "log_molecules": 2.924279,
        },
        {
          "log_genes": 2.70757,
          "log_molecules": 2.924796,
        },
        {
          "log_genes": 2.583199,
          "log_molecules": 2.925312,
        },
        {
          "log_genes": 2.752816,
          "log_molecules": 2.933487,
        },
        {
          "log_genes": 2.643453,
          "log_molecules": 2.935003,
        },
        {
          "log_genes": 2.547775,
          "log_molecules": 2.942504,
        },
        {
          "log_genes": 2.704151,
          "log_molecules": 2.950851,
        },
        {
          "log_genes": 2.136721,
          "log_molecules": 2.952792,
        },
        {
          "log_genes": 2.518514,
          "log_molecules": 2.953276,
        },
        {
          "log_genes": 2.592177,
          "log_molecules": 2.956649,
        },
        {
          "log_genes": 2.781037,
          "log_molecules": 2.956649,
        },
        {
          "log_genes": 2.722634,
          "log_molecules": 2.957607,
        },
        {
          "log_genes": 2.572872,
          "log_molecules": 2.959041,
        },
        {
          "log_genes": 1.892095,
          "log_molecules": 2.961421,
        },
        {
          "log_genes": 2.749736,
          "log_molecules": 2.965202,
        },
        {
          "log_genes": 1.897627,
          "log_molecules": 2.980458,
        },
        {
          "log_genes": 2.09691,
          "log_molecules": 2.984527,
        },
        {
          "log_genes": 2.726727,
          "log_molecules": 2.989005,
        },
        {
          "log_genes": 2.716003,
          "log_molecules": 2.992554,
        },
        {
          "log_genes": 2.729974,
          "log_molecules": 3.001734,
        },
        {
          "log_genes": 2.7348,
          "log_molecules": 3.004751,
        },
        {
          "log_genes": 2.744293,
          "log_molecules": 3.009876,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.01494,
        },
        {
          "log_genes": 2.646404,
          "log_molecules": 3.017033,
        },
        {
          "log_genes": 1.832509,
          "log_molecules": 3.017868,
        },
        {
          "log_genes": 1.826075,
          "log_molecules": 3.018284,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.0306,
        },
        {
          "log_genes": 2.716838,
          "log_molecules": 3.033826,
        },
        {
          "log_genes": 2.761176,
          "log_molecules": 3.037825,
        },
        {
          "log_genes": 1.732394,
          "log_molecules": 3.041393,
        },
        {
          "log_genes": 1.653213,
          "log_molecules": 3.043362,
        },
        {
          "log_genes": 1.69897,
          "log_molecules": 3.044932,
        },
        {
          "log_genes": 2.751279,
          "log_molecules": 3.045714,
        },
        {
          "log_genes": 2.817565,
          "log_molecules": 3.046105,
        },
        {
          "log_genes": 2.784617,
          "log_molecules": 3.050766,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.052694,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.057286,
        },
        {
          "log_genes": 2.814248,
          "log_molecules": 3.057286,
        },
        {
          "log_genes": 1.838849,
          "log_molecules": 3.061075,
        },
        {
          "log_genes": 2.724276,
          "log_molecules": 3.062206,
        },
        {
          "log_genes": 2.733999,
          "log_molecules": 3.062958,
        },
        {
          "log_genes": 1.716003,
          "log_molecules": 3.065206,
        },
        {
          "log_genes": 2.570543,
          "log_molecules": 3.06558,
        },
        {
          "log_genes": 2.781037,
          "log_molecules": 3.065953,
        },
        {
          "log_genes": 2.710117,
          "log_molecules": 3.072985,
        },
        {
          "log_genes": 2.738781,
          "log_molecules": 3.078457,
        },
        {
          "log_genes": 2.870989,
          "log_molecules": 3.079543,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.079543,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.084934,
        },
        {
          "log_genes": 2.848189,
          "log_molecules": 3.091315,
        },
        {
          "log_genes": 1.886491,
          "log_molecules": 3.094122,
        },
        {
          "log_genes": 2.790285,
          "log_molecules": 3.097604,
        },
        {
          "log_genes": 2.802774,
          "log_molecules": 3.098298,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.108565,
        },
        {
          "log_genes": 2.807535,
          "log_molecules": 3.109916,
        },
        {
          "log_genes": 2.835056,
          "log_molecules": 3.11294,
        },
        {
          "log_genes": 2.782473,
          "log_molecules": 3.117603,
        },
        {
          "log_genes": 2.826075,
          "log_molecules": 3.120245,
        },
        {
          "log_genes": 1.78533,
          "log_molecules": 3.123525,
        },
        {
          "log_genes": 2.694605,
          "log_molecules": 3.123852,
        },
        {
          "log_genes": 2.727541,
          "log_molecules": 3.125481,
        },
        {
          "log_genes": 2.798651,
          "log_molecules": 3.125806,
        },
        {
          "log_genes": 2.797268,
          "log_molecules": 3.127105,
        },
        {
          "log_genes": 2.89098,
          "log_molecules": 3.130655,
        },
        {
          "log_genes": 2.701568,
          "log_molecules": 3.134814,
        },
        {
          "log_genes": 2.755875,
          "log_molecules": 3.136721,
        },
        {
          "log_genes": 2.824776,
          "log_molecules": 3.136721,
        },
        {
          "log_genes": 2.830589,
          "log_molecules": 3.137354,
        },
        {
          "log_genes": 1.633468,
          "log_molecules": 3.138303,
        },
        {
          "log_genes": 2.876795,
          "log_molecules": 3.139249,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.140508,
        },
        {
          "log_genes": 1.643453,
          "log_molecules": 3.140508,
        },
        {
          "log_genes": 2.778874,
          "log_molecules": 3.140822,
        },
        {
          "log_genes": 2.872739,
          "log_molecules": 3.144885,
        },
        {
          "log_genes": 2.804139,
          "log_molecules": 3.145196,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.145818,
        },
        {
          "log_genes": 2.877371,
          "log_molecules": 3.146128,
        },
        {
          "log_genes": 2.762679,
          "log_molecules": 3.147367,
        },
        {
          "log_genes": 2.779596,
          "log_molecules": 3.150142,
        },
        {
          "log_genes": 2.717671,
          "log_molecules": 3.15137,
        },
        {
          "log_genes": 2.856124,
          "log_molecules": 3.1529,
        },
        {
          "log_genes": 2.865696,
          "log_molecules": 3.15351,
        },
        {
          "log_genes": 2.732394,
          "log_molecules": 3.157154,
        },
        {
          "log_genes": 2.71433,
          "log_molecules": 3.161068,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.162266,
        },
        {
          "log_genes": 2.737987,
          "log_molecules": 3.163161,
        },
        {
          "log_genes": 2.848189,
          "log_molecules": 3.165244,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.165838,
        },
        {
          "log_genes": 2.804139,
          "log_molecules": 3.165838,
        },
        {
          "log_genes": 1.60206,
          "log_molecules": 3.167908,
        },
        {
          "log_genes": 2.669317,
          "log_molecules": 3.169674,
        },
        {
          "log_genes": 2.810904,
          "log_molecules": 3.171141,
        },
        {
          "log_genes": 2.906874,
          "log_molecules": 3.171434,
        },
        {
          "log_genes": 2.718502,
          "log_molecules": 3.174641,
        },
        {
          "log_genes": 2.857935,
          "log_molecules": 3.176381,
        },
        {
          "log_genes": 2.780317,
          "log_molecules": 3.176959,
        },
        {
          "log_genes": 2.708421,
          "log_molecules": 3.179264,
        },
        {
          "log_genes": 2.700704,
          "log_molecules": 3.179839,
        },
        {
          "log_genes": 2.873321,
          "log_molecules": 3.180699,
        },
        {
          "log_genes": 2.829947,
          "log_molecules": 3.183555,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.186108,
        },
        {
          "log_genes": 2.836957,
          "log_molecules": 3.186108,
        },
        {
          "log_genes": 2.943,
          "log_molecules": 3.186956,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.187521,
        },
        {
          "log_genes": 2.935507,
          "log_molecules": 3.18949,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.18949,
        },
        {
          "log_genes": 2.78533,
          "log_molecules": 3.190332,
        },
        {
          "log_genes": 2.854913,
          "log_molecules": 3.190612,
        },
        {
          "log_genes": 2.857332,
          "log_molecules": 3.191451,
        },
        {
          "log_genes": 2.751279,
          "log_molecules": 3.192289,
        },
        {
          "log_genes": 2.854306,
          "log_molecules": 3.192567,
        },
        {
          "log_genes": 2.803457,
          "log_molecules": 3.193403,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.1959,
        },
        {
          "log_genes": 2.750508,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.83123,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.835056,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.850033,
          "log_molecules": 3.196453,
        },
        {
          "log_genes": 2.718502,
          "log_molecules": 3.197832,
        },
        {
          "log_genes": 2.872156,
          "log_molecules": 3.198382,
        },
        {
          "log_genes": 2.778874,
          "log_molecules": 3.199206,
        },
        {
          "log_genes": 2.775974,
          "log_molecules": 3.201397,
        },
        {
          "log_genes": 2.7348,
          "log_molecules": 3.201943,
        },
        {
          "log_genes": 2.846337,
          "log_molecules": 3.201943,
        },
        {
          "log_genes": 2.903633,
          "log_molecules": 3.202488,
        },
        {
          "log_genes": 1.826075,
          "log_molecules": 3.202488,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.203033,
        },
        {
          "log_genes": 2.881955,
          "log_molecules": 3.205204,
        },
        {
          "log_genes": 2.814248,
          "log_molecules": 3.205204,
        },
        {
          "log_genes": 2.92737,
          "log_molecules": 3.206286,
        },
        {
          "log_genes": 2.816904,
          "log_molecules": 3.206826,
        },
        {
          "log_genes": 2.764176,
          "log_molecules": 3.207904,
        },
        {
          "log_genes": 2.861534,
          "log_molecules": 3.209515,
        },
        {
          "log_genes": 2.767156,
          "log_molecules": 3.209783,
        },
        {
          "log_genes": 2.778151,
          "log_molecules": 3.209783,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.21272,
        },
        {
          "log_genes": 2.750508,
          "log_molecules": 3.213252,
        },
        {
          "log_genes": 2.761928,
          "log_molecules": 3.213518,
        },
        {
          "log_genes": 2.855519,
          "log_molecules": 3.214314,
        },
        {
          "log_genes": 2.863917,
          "log_molecules": 3.214579,
        },
        {
          "log_genes": 2.840106,
          "log_molecules": 3.215902,
        },
        {
          "log_genes": 2.775974,
          "log_molecules": 3.21643,
        },
        {
          "log_genes": 2.818885,
          "log_molecules": 3.219323,
        },
        {
          "log_genes": 2.834421,
          "log_molecules": 3.22037,
        },
        {
          "log_genes": 2.760422,
          "log_molecules": 3.220892,
        },
        {
          "log_genes": 2.863323,
          "log_molecules": 3.221414,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.221675,
        },
        {
          "log_genes": 1.812913,
          "log_molecules": 3.222456,
        },
        {
          "log_genes": 2.892651,
          "log_molecules": 3.222456,
        },
        {
          "log_genes": 2.947924,
          "log_molecules": 3.223236,
        },
        {
          "log_genes": 1.94939,
          "log_molecules": 3.224274,
        },
        {
          "log_genes": 2.963788,
          "log_molecules": 3.224533,
        },
        {
          "log_genes": 2.885926,
          "log_molecules": 3.225826,
        },
        {
          "log_genes": 2.818885,
          "log_molecules": 3.2284,
        },
        {
          "log_genes": 2.885361,
          "log_molecules": 3.228913,
        },
        {
          "log_genes": 2.733999,
          "log_molecules": 3.230193,
        },
        {
          "log_genes": 2.790988,
          "log_molecules": 3.230193,
        },
        {
          "log_genes": 2.95376,
          "log_molecules": 3.23325,
        },
        {
          "log_genes": 2.804821,
          "log_molecules": 3.233757,
        },
        {
          "log_genes": 2.850646,
          "log_molecules": 3.233757,
        },
        {
          "log_genes": 2.808886,
          "log_molecules": 3.234517,
        },
        {
          "log_genes": 2.962843,
          "log_molecules": 3.235023,
        },
        {
          "log_genes": 2.83187,
          "log_molecules": 3.235276,
        },
        {
          "log_genes": 2.828015,
          "log_molecules": 3.237795,
        },
        {
          "log_genes": 2.783904,
          "log_molecules": 3.239299,
        },
        {
          "log_genes": 2.745075,
          "log_molecules": 3.240799,
        },
        {
          "log_genes": 2.89098,
          "log_molecules": 3.241795,
        },
        {
          "log_genes": 2.813581,
          "log_molecules": 3.244277,
        },
        {
          "log_genes": 1.851258,
          "log_molecules": 3.245019,
        },
        {
          "log_genes": 2.847573,
          "log_molecules": 3.245513,
        },
        {
          "log_genes": 2.826723,
          "log_molecules": 3.246252,
        },
        {
          "log_genes": 2.841985,
          "log_molecules": 3.246499,
        },
        {
          "log_genes": 2.851258,
          "log_molecules": 3.246499,
        },
        {
          "log_genes": 2.862728,
          "log_molecules": 3.247728,
        },
        {
          "log_genes": 2.936011,
          "log_molecules": 3.248709,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.254306,
        },
        {
          "log_genes": 2.900367,
          "log_molecules": 3.255031,
        },
        {
          "log_genes": 2.826075,
          "log_molecules": 3.255031,
        },
        {
          "log_genes": 2.763428,
          "log_molecules": 3.255273,
        },
        {
          "log_genes": 2.978637,
          "log_molecules": 3.256237,
        },
        {
          "log_genes": 2.924279,
          "log_molecules": 3.257679,
        },
        {
          "log_genes": 2.80618,
          "log_molecules": 3.259594,
        },
        {
          "log_genes": 2.837588,
          "log_molecules": 3.259833,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.261025,
        },
        {
          "log_genes": 2.866878,
          "log_molecules": 3.261263,
        },
        {
          "log_genes": 2.79796,
          "log_molecules": 3.262214,
        },
        {
          "log_genes": 2.901458,
          "log_molecules": 3.263873,
        },
        {
          "log_genes": 2.884229,
          "log_molecules": 3.26529,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.265761,
        },
        {
          "log_genes": 2.834421,
          "log_molecules": 3.265996,
        },
        {
          "log_genes": 2.773786,
          "log_molecules": 3.266937,
        },
        {
          "log_genes": 1.944483,
          "log_molecules": 3.267172,
        },
        {
          "log_genes": 2.825426,
          "log_molecules": 3.267875,
        },
        {
          "log_genes": 2.127105,
          "log_molecules": 3.268344,
        },
        {
          "log_genes": 2.893762,
          "log_molecules": 3.268344,
        },
        {
          "log_genes": 2.846955,
          "log_molecules": 3.269513,
        },
        {
          "log_genes": 2.817565,
          "log_molecules": 3.270213,
        },
        {
          "log_genes": 2.838219,
          "log_molecules": 3.270679,
        },
        {
          "log_genes": 2.87564,
          "log_molecules": 3.271144,
        },
        {
          "log_genes": 2.93044,
          "log_molecules": 3.271377,
        },
        {
          "log_genes": 2.952792,
          "log_molecules": 3.271609,
        },
        {
          "log_genes": 2.79796,
          "log_molecules": 3.271609,
        },
        {
          "log_genes": 2.850033,
          "log_molecules": 3.271842,
        },
        {
          "log_genes": 2.91698,
          "log_molecules": 3.271842,
        },
        {
          "log_genes": 2.757396,
          "log_molecules": 3.272306,
        },
        {
          "log_genes": 2.820858,
          "log_molecules": 3.272306,
        },
        {
          "log_genes": 2.967548,
          "log_molecules": 3.274158,
        },
        {
          "log_genes": 2.841985,
          "log_molecules": 3.274389,
        },
        {
          "log_genes": 2.771587,
          "log_molecules": 3.27462,
        },
        {
          "log_genes": 2.879669,
          "log_molecules": 3.275311,
        },
        {
          "log_genes": 2.810904,
          "log_molecules": 3.275311,
        },
        {
          "log_genes": 2.842609,
          "log_molecules": 3.275772,
        },
        {
          "log_genes": 2.815578,
          "log_molecules": 3.276692,
        },
        {
          "log_genes": 2.904174,
          "log_molecules": 3.276921,
        },
        {
          "log_genes": 2.726727,
          "log_molecules": 3.277151,
        },
        {
          "log_genes": 2.992111,
          "log_molecules": 3.27738,
        },
        {
          "log_genes": 2.949878,
          "log_molecules": 3.277609,
        },
        {
          "log_genes": 2.92737,
          "log_molecules": 3.277838,
        },
        {
          "log_genes": 2.932474,
          "log_molecules": 3.278296,
        },
        {
          "log_genes": 2.82866,
          "log_molecules": 3.279667,
        },
        {
          "log_genes": 2.819544,
          "log_molecules": 3.279895,
        },
        {
          "log_genes": 2.863917,
          "log_molecules": 3.280123,
        },
        {
          "log_genes": 2.771587,
          "log_molecules": 3.280351,
        },
        {
          "log_genes": 2.904174,
          "log_molecules": 3.280578,
        },
        {
          "log_genes": 2.848805,
          "log_molecules": 3.280806,
        },
        {
          "log_genes": 2.856124,
          "log_molecules": 3.281033,
        },
        {
          "log_genes": 2.846337,
          "log_molecules": 3.281033,
        },
      ],
    },
    {
      "format": {
        "copy": true,
        "type": "json",
      },
      "name": "linesData",
      "values": [
        {
          "log_molecules": 2.69897,
          "lower_cutoff": 2.092375,
          "upper_cutoff": 2.817468,
        },
        {
          "log_molecules": 2.906867,
          "lower_cutoff": 2.235197,
          "upper_cutoff": 2.959697,
        },
        {
          "log_molecules": 3.114763,
          "lower_cutoff": 2.377937,
          "upper_cutoff": 3.102006,
        },
        {
          "log_molecules": 3.32266,
          "lower_cutoff": 2.520597,
          "upper_cutoff": 3.244397,
        },
        {
          "log_molecules": 3.530557,
          "lower_cutoff": 2.663175,
          "upper_cutoff": 3.386869,
        },
        {
          "log_molecules": 3.738454,
          "lower_cutoff": 2.805673,
          "upper_cutoff": 3.529422,
        },
        {
          "log_molecules": 3.94635,
          "lower_cutoff": 2.948088,
          "upper_cutoff": 3.672056,
        },
        {
          "log_molecules": 4.154247,
          "lower_cutoff": 3.090423,
          "upper_cutoff": 3.814772,
        },
        {
          "log_molecules": 4.362144,
          "lower_cutoff": 3.232677,
          "upper_cutoff": 3.957568,
        },
        {
          "log_molecules": 4.570041,
          "lower_cutoff": 3.37485,
          "upper_cutoff": 4.100446,
        },
      ],
    },
  ],
  "height": 500,
  "marks": [
    {
      "clip": true,
      "encode": {
        "update": {
          "fill": {
            "value": "blue",
          },
          "opacity": {
            "value": 0.9,
          },
          "size": {
            "value": 15,
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "log_genes",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "pointsData",
      },
      "name": "marks",
      "type": "symbol",
    },
    {
      "clip": true,
      "encode": {
        "update": {
          "stroke": {
            "value": "red",
          },
          "strokeDash": {
            "value": [
              8,
              4,
            ],
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "upper_cutoff",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "linesData",
      },
      "type": "line",
    },
    {
      "clip": true,
      "encode": {
        "update": {
          "stroke": {
            "value": "red",
          },
          "strokeDash": {
            "value": [
              8,
              4,
            ],
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "lower_cutoff",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "linesData",
      },
      "type": "line",
    },
  ],
  "padding": 5,
  "scales": [
    {
      "domain": {
        "data": "pointsData",
        "field": "log_molecules",
      },
      "name": "x",
      "range": "width",
      "round": true,
      "type": "linear",
      "zero": false,
    },
    {
      "domain": [
        1.7545782168801844,
        4.438242783119816,
      ],
      "name": "y",
      "range": "height",
      "round": true,
      "type": "linear",
      "zero": false,
    },
  ],
  "title": {
    "anchor": "start",
    "color": "#000000",
    "dx": 10,
    "font": "sans-serif",
    "fontSize": 20,
    "text": "",
  },
  "width": 630,
}
`;

exports[`features vs umis plot picks correct linesData point if prediction interval is between 0 and 0.99 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega/v5.json",
  "autosize": {
    "resize": true,
    "type": "fit",
  },
  "axes": [
    {
      "domain": false,
      "grid": true,
      "gridOpacity": 0.5,
      "labelAlign": "center",
      "labelAngle": 0,
      "labelFont": "sans-serif",
      "labelFontSize": 12,
      "offset": 0,
      "orient": "bottom",
      "scale": "x",
      "tickCount": 5,
      "title": "log10 [molecule counts]",
      "titleFont": "sans-serif",
      "titleFontSize": 13,
      "zindex": 1,
    },
    {
      "domain": false,
      "grid": true,
      "gridOpacity": 0.5,
      "labelFont": "sans-serif",
      "labelFontSize": 12,
      "offset": 0,
      "orient": "left",
      "scale": "y",
      "title": "log10 [gene counts]",
      "titleFont": "sans-serif",
      "titleFontSize": 13,
      "titlePadding": 5,
      "zindex": 1,
    },
  ],
  "data": [
    {
      "format": {
        "copy": true,
        "type": "json",
      },
      "name": "pointsData",
      "transform": [
        {
          "expr": "datum['log_genes'] != null && datum['log_molecules'] != null",
          "type": "filter",
        },
        {
          "expr": "datum.log_genes >= 2.0129872168801843 && datum.log_genes <= 4.179654783119816",
          "type": "filter",
        },
      ],
      "values": [
        {
          "log_genes": 2.515874,
          "log_molecules": 2.69897,
        },
        {
          "log_genes": 2.390935,
          "log_molecules": 2.699838,
        },
        {
          "log_genes": 2.369216,
          "log_molecules": 2.701568,
        },
        {
          "log_genes": 1.544068,
          "log_molecules": 2.701568,
        },
        {
          "log_genes": 2.409933,
          "log_molecules": 2.703291,
        },
        {
          "log_genes": 2.501059,
          "log_molecules": 2.706718,
        },
        {
          "log_genes": 2.495544,
          "log_molecules": 2.71265,
        },
        {
          "log_genes": 2.376577,
          "log_molecules": 2.713491,
        },
        {
          "log_genes": 2.296665,
          "log_molecules": 2.716838,
        },
        {
          "log_genes": 2.474216,
          "log_molecules": 2.716838,
        },
        {
          "log_genes": 2.494155,
          "log_molecules": 2.723456,
        },
        {
          "log_genes": 1.633468,
          "log_molecules": 2.727541,
        },
        {
          "log_genes": 2.509203,
          "log_molecules": 2.730782,
        },
        {
          "log_genes": 2.419956,
          "log_molecules": 2.730782,
        },
        {
          "log_genes": 2.444045,
          "log_molecules": 2.733999,
        },
        {
          "log_genes": 2.348305,
          "log_molecules": 2.736397,
        },
        {
          "log_genes": 2.565848,
          "log_molecules": 2.739572,
        },
        {
          "log_genes": 2.320146,
          "log_molecules": 2.750508,
        },
        {
          "log_genes": 2.521138,
          "log_molecules": 2.750508,
        },
        {
          "log_genes": 1.968483,
          "log_molecules": 2.754348,
        },
        {
          "log_genes": 1.591065,
          "log_molecules": 2.761176,
        },
        {
          "log_genes": 2.503791,
          "log_molecules": 2.764176,
        },
        {
          "log_genes": 2.431364,
          "log_molecules": 2.768638,
        },
        {
          "log_genes": 2.459392,
          "log_molecules": 2.775974,
        },
        {
          "log_genes": 2.385606,
          "log_molecules": 2.780317,
        },
        {
          "log_genes": 2.466868,
          "log_molecules": 2.781037,
        },
        {
          "log_genes": 2.494155,
          "log_molecules": 2.782473,
        },
        {
          "log_genes": 2.491362,
          "log_molecules": 2.78533,
        },
        {
          "log_genes": 2.499687,
          "log_molecules": 2.788875,
        },
        {
          "log_genes": 2.558709,
          "log_molecules": 2.791691,
        },
        {
          "log_genes": 2.44248,
          "log_molecules": 2.79379,
        },
        {
          "log_genes": 2.603144,
          "log_molecules": 2.795185,
        },
        {
          "log_genes": 1.94939,
          "log_molecules": 2.795185,
        },
        {
          "log_genes": 2.555094,
          "log_molecules": 2.797268,
        },
        {
          "log_genes": 2.448706,
          "log_molecules": 2.798651,
        },
        {
          "log_genes": 2.440909,
          "log_molecules": 2.805501,
        },
        {
          "log_genes": 2.465383,
          "log_molecules": 2.806858,
        },
        {
          "log_genes": 2.445604,
          "log_molecules": 2.810904,
        },
        {
          "log_genes": 2.478566,
          "log_molecules": 2.812913,
        },
        {
          "log_genes": 2.570543,
          "log_molecules": 2.813581,
        },
        {
          "log_genes": 2.603144,
          "log_molecules": 2.818885,
        },
        {
          "log_genes": 2.40654,
          "log_molecules": 2.826723,
        },
        {
          "log_genes": 2.513218,
          "log_molecules": 2.82866,
        },
        {
          "log_genes": 2.414973,
          "log_molecules": 2.830589,
        },
        {
          "log_genes": 1.845098,
          "log_molecules": 2.83123,
        },
        {
          "log_genes": 2.463893,
          "log_molecules": 2.834421,
        },
        {
          "log_genes": 1.792392,
          "log_molecules": 2.835691,
        },
        {
          "log_genes": 2.459392,
          "log_molecules": 2.835691,
        },
        {
          "log_genes": 1.755875,
          "log_molecules": 2.839478,
        },
        {
          "log_genes": 1.770852,
          "log_molecules": 2.841985,
        },
        {
          "log_genes": 2.565848,
          "log_molecules": 2.844477,
        },
        {
          "log_genes": 1.799341,
          "log_molecules": 2.844477,
        },
        {
          "log_genes": 2.563481,
          "log_molecules": 2.845098,
        },
        {
          "log_genes": 1.732394,
          "log_molecules": 2.846337,
        },
        {
          "log_genes": 2.462398,
          "log_molecules": 2.850646,
        },
        {
          "log_genes": 1.643453,
          "log_molecules": 2.863323,
        },
        {
          "log_genes": 2.617,
          "log_molecules": 2.865104,
        },
        {
          "log_genes": 2.480007,
          "log_molecules": 2.867467,
        },
        {
          "log_genes": 2.372912,
          "log_molecules": 2.868644,
        },
        {
          "log_genes": 2.481443,
          "log_molecules": 2.869818,
        },
        {
          "log_genes": 2.647383,
          "log_molecules": 2.877947,
        },
        {
          "log_genes": 2.567026,
          "log_molecules": 2.880242,
        },
        {
          "log_genes": 2.582063,
          "log_molecules": 2.883093,
        },
        {
          "log_genes": 1.812913,
          "log_molecules": 2.883093,
        },
        {
          "log_genes": 2.434569,
          "log_molecules": 2.884795,
        },
        {
          "log_genes": 2.668386,
          "log_molecules": 2.888741,
        },
        {
          "log_genes": 2.716838,
          "log_molecules": 2.893762,
        },
        {
          "log_genes": 2.686636,
          "log_molecules": 2.89487,
        },
        {
          "log_genes": 2.478566,
          "log_molecules": 2.895423,
        },
        {
          "log_genes": 2.638489,
          "log_molecules": 2.905256,
        },
        {
          "log_genes": 2.553883,
          "log_molecules": 2.910091,
        },
        {
          "log_genes": 2.539076,
          "log_molecules": 2.91169,
        },
        {
          "log_genes": 1.913814,
          "log_molecules": 2.91698,
        },
        {
          "log_genes": 2.466868,
          "log_molecules": 2.917506,
        },
        {
          "log_genes": 2.683047,
          "log_molecules": 2.91803,
        },
        {
          "log_genes": 2.621176,
          "log_molecules": 2.924279,
        },
        {
          "log_genes": 2.70757,
          "log_molecules": 2.924796,
        },
        {
          "log_genes": 2.583199,
          "log_molecules": 2.925312,
        },
        {
          "log_genes": 2.752816,
          "log_molecules": 2.933487,
        },
        {
          "log_genes": 2.643453,
          "log_molecules": 2.935003,
        },
        {
          "log_genes": 2.547775,
          "log_molecules": 2.942504,
        },
        {
          "log_genes": 2.704151,
          "log_molecules": 2.950851,
        },
        {
          "log_genes": 2.136721,
          "log_molecules": 2.952792,
        },
        {
          "log_genes": 2.518514,
          "log_molecules": 2.953276,
        },
        {
          "log_genes": 2.592177,
          "log_molecules": 2.956649,
        },
        {
          "log_genes": 2.781037,
          "log_molecules": 2.956649,
        },
        {
          "log_genes": 2.722634,
          "log_molecules": 2.957607,
        },
        {
          "log_genes": 2.572872,
          "log_molecules": 2.959041,
        },
        {
          "log_genes": 1.892095,
          "log_molecules": 2.961421,
        },
        {
          "log_genes": 2.749736,
          "log_molecules": 2.965202,
        },
        {
          "log_genes": 1.897627,
          "log_molecules": 2.980458,
        },
        {
          "log_genes": 2.09691,
          "log_molecules": 2.984527,
        },
        {
          "log_genes": 2.726727,
          "log_molecules": 2.989005,
        },
        {
          "log_genes": 2.716003,
          "log_molecules": 2.992554,
        },
        {
          "log_genes": 2.729974,
          "log_molecules": 3.001734,
        },
        {
          "log_genes": 2.7348,
          "log_molecules": 3.004751,
        },
        {
          "log_genes": 2.744293,
          "log_molecules": 3.009876,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.01494,
        },
        {
          "log_genes": 2.646404,
          "log_molecules": 3.017033,
        },
        {
          "log_genes": 1.832509,
          "log_molecules": 3.017868,
        },
        {
          "log_genes": 1.826075,
          "log_molecules": 3.018284,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.0306,
        },
        {
          "log_genes": 2.716838,
          "log_molecules": 3.033826,
        },
        {
          "log_genes": 2.761176,
          "log_molecules": 3.037825,
        },
        {
          "log_genes": 1.732394,
          "log_molecules": 3.041393,
        },
        {
          "log_genes": 1.653213,
          "log_molecules": 3.043362,
        },
        {
          "log_genes": 1.69897,
          "log_molecules": 3.044932,
        },
        {
          "log_genes": 2.751279,
          "log_molecules": 3.045714,
        },
        {
          "log_genes": 2.817565,
          "log_molecules": 3.046105,
        },
        {
          "log_genes": 2.784617,
          "log_molecules": 3.050766,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.052694,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.057286,
        },
        {
          "log_genes": 2.814248,
          "log_molecules": 3.057286,
        },
        {
          "log_genes": 1.838849,
          "log_molecules": 3.061075,
        },
        {
          "log_genes": 2.724276,
          "log_molecules": 3.062206,
        },
        {
          "log_genes": 2.733999,
          "log_molecules": 3.062958,
        },
        {
          "log_genes": 1.716003,
          "log_molecules": 3.065206,
        },
        {
          "log_genes": 2.570543,
          "log_molecules": 3.06558,
        },
        {
          "log_genes": 2.781037,
          "log_molecules": 3.065953,
        },
        {
          "log_genes": 2.710117,
          "log_molecules": 3.072985,
        },
        {
          "log_genes": 2.738781,
          "log_molecules": 3.078457,
        },
        {
          "log_genes": 2.870989,
          "log_molecules": 3.079543,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.079543,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.084934,
        },
        {
          "log_genes": 2.848189,
          "log_molecules": 3.091315,
        },
        {
          "log_genes": 1.886491,
          "log_molecules": 3.094122,
        },
        {
          "log_genes": 2.790285,
          "log_molecules": 3.097604,
        },
        {
          "log_genes": 2.802774,
          "log_molecules": 3.098298,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.108565,
        },
        {
          "log_genes": 2.807535,
          "log_molecules": 3.109916,
        },
        {
          "log_genes": 2.835056,
          "log_molecules": 3.11294,
        },
        {
          "log_genes": 2.782473,
          "log_molecules": 3.117603,
        },
        {
          "log_genes": 2.826075,
          "log_molecules": 3.120245,
        },
        {
          "log_genes": 1.78533,
          "log_molecules": 3.123525,
        },
        {
          "log_genes": 2.694605,
          "log_molecules": 3.123852,
        },
        {
          "log_genes": 2.727541,
          "log_molecules": 3.125481,
        },
        {
          "log_genes": 2.798651,
          "log_molecules": 3.125806,
        },
        {
          "log_genes": 2.797268,
          "log_molecules": 3.127105,
        },
        {
          "log_genes": 2.89098,
          "log_molecules": 3.130655,
        },
        {
          "log_genes": 2.701568,
          "log_molecules": 3.134814,
        },
        {
          "log_genes": 2.755875,
          "log_molecules": 3.136721,
        },
        {
          "log_genes": 2.824776,
          "log_molecules": 3.136721,
        },
        {
          "log_genes": 2.830589,
          "log_molecules": 3.137354,
        },
        {
          "log_genes": 1.633468,
          "log_molecules": 3.138303,
        },
        {
          "log_genes": 2.876795,
          "log_molecules": 3.139249,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.140508,
        },
        {
          "log_genes": 1.643453,
          "log_molecules": 3.140508,
        },
        {
          "log_genes": 2.778874,
          "log_molecules": 3.140822,
        },
        {
          "log_genes": 2.872739,
          "log_molecules": 3.144885,
        },
        {
          "log_genes": 2.804139,
          "log_molecules": 3.145196,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.145818,
        },
        {
          "log_genes": 2.877371,
          "log_molecules": 3.146128,
        },
        {
          "log_genes": 2.762679,
          "log_molecules": 3.147367,
        },
        {
          "log_genes": 2.779596,
          "log_molecules": 3.150142,
        },
        {
          "log_genes": 2.717671,
          "log_molecules": 3.15137,
        },
        {
          "log_genes": 2.856124,
          "log_molecules": 3.1529,
        },
        {
          "log_genes": 2.865696,
          "log_molecules": 3.15351,
        },
        {
          "log_genes": 2.732394,
          "log_molecules": 3.157154,
        },
        {
          "log_genes": 2.71433,
          "log_molecules": 3.161068,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.162266,
        },
        {
          "log_genes": 2.737987,
          "log_molecules": 3.163161,
        },
        {
          "log_genes": 2.848189,
          "log_molecules": 3.165244,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.165838,
        },
        {
          "log_genes": 2.804139,
          "log_molecules": 3.165838,
        },
        {
          "log_genes": 1.60206,
          "log_molecules": 3.167908,
        },
        {
          "log_genes": 2.669317,
          "log_molecules": 3.169674,
        },
        {
          "log_genes": 2.810904,
          "log_molecules": 3.171141,
        },
        {
          "log_genes": 2.906874,
          "log_molecules": 3.171434,
        },
        {
          "log_genes": 2.718502,
          "log_molecules": 3.174641,
        },
        {
          "log_genes": 2.857935,
          "log_molecules": 3.176381,
        },
        {
          "log_genes": 2.780317,
          "log_molecules": 3.176959,
        },
        {
          "log_genes": 2.708421,
          "log_molecules": 3.179264,
        },
        {
          "log_genes": 2.700704,
          "log_molecules": 3.179839,
        },
        {
          "log_genes": 2.873321,
          "log_molecules": 3.180699,
        },
        {
          "log_genes": 2.829947,
          "log_molecules": 3.183555,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.186108,
        },
        {
          "log_genes": 2.836957,
          "log_molecules": 3.186108,
        },
        {
          "log_genes": 2.943,
          "log_molecules": 3.186956,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.187521,
        },
        {
          "log_genes": 2.935507,
          "log_molecules": 3.18949,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.18949,
        },
        {
          "log_genes": 2.78533,
          "log_molecules": 3.190332,
        },
        {
          "log_genes": 2.854913,
          "log_molecules": 3.190612,
        },
        {
          "log_genes": 2.857332,
          "log_molecules": 3.191451,
        },
        {
          "log_genes": 2.751279,
          "log_molecules": 3.192289,
        },
        {
          "log_genes": 2.854306,
          "log_molecules": 3.192567,
        },
        {
          "log_genes": 2.803457,
          "log_molecules": 3.193403,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.1959,
        },
        {
          "log_genes": 2.750508,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.83123,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.835056,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.850033,
          "log_molecules": 3.196453,
        },
        {
          "log_genes": 2.718502,
          "log_molecules": 3.197832,
        },
        {
          "log_genes": 2.872156,
          "log_molecules": 3.198382,
        },
        {
          "log_genes": 2.778874,
          "log_molecules": 3.199206,
        },
        {
          "log_genes": 2.775974,
          "log_molecules": 3.201397,
        },
        {
          "log_genes": 2.7348,
          "log_molecules": 3.201943,
        },
        {
          "log_genes": 2.846337,
          "log_molecules": 3.201943,
        },
        {
          "log_genes": 2.903633,
          "log_molecules": 3.202488,
        },
        {
          "log_genes": 1.826075,
          "log_molecules": 3.202488,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.203033,
        },
        {
          "log_genes": 2.881955,
          "log_molecules": 3.205204,
        },
        {
          "log_genes": 2.814248,
          "log_molecules": 3.205204,
        },
        {
          "log_genes": 2.92737,
          "log_molecules": 3.206286,
        },
        {
          "log_genes": 2.816904,
          "log_molecules": 3.206826,
        },
        {
          "log_genes": 2.764176,
          "log_molecules": 3.207904,
        },
        {
          "log_genes": 2.861534,
          "log_molecules": 3.209515,
        },
        {
          "log_genes": 2.767156,
          "log_molecules": 3.209783,
        },
        {
          "log_genes": 2.778151,
          "log_molecules": 3.209783,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.21272,
        },
        {
          "log_genes": 2.750508,
          "log_molecules": 3.213252,
        },
        {
          "log_genes": 2.761928,
          "log_molecules": 3.213518,
        },
        {
          "log_genes": 2.855519,
          "log_molecules": 3.214314,
        },
        {
          "log_genes": 2.863917,
          "log_molecules": 3.214579,
        },
        {
          "log_genes": 2.840106,
          "log_molecules": 3.215902,
        },
        {
          "log_genes": 2.775974,
          "log_molecules": 3.21643,
        },
        {
          "log_genes": 2.818885,
          "log_molecules": 3.219323,
        },
        {
          "log_genes": 2.834421,
          "log_molecules": 3.22037,
        },
        {
          "log_genes": 2.760422,
          "log_molecules": 3.220892,
        },
        {
          "log_genes": 2.863323,
          "log_molecules": 3.221414,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.221675,
        },
        {
          "log_genes": 1.812913,
          "log_molecules": 3.222456,
        },
        {
          "log_genes": 2.892651,
          "log_molecules": 3.222456,
        },
        {
          "log_genes": 2.947924,
          "log_molecules": 3.223236,
        },
        {
          "log_genes": 1.94939,
          "log_molecules": 3.224274,
        },
        {
          "log_genes": 2.963788,
          "log_molecules": 3.224533,
        },
        {
          "log_genes": 2.885926,
          "log_molecules": 3.225826,
        },
        {
          "log_genes": 2.818885,
          "log_molecules": 3.2284,
        },
        {
          "log_genes": 2.885361,
          "log_molecules": 3.228913,
        },
        {
          "log_genes": 2.733999,
          "log_molecules": 3.230193,
        },
        {
          "log_genes": 2.790988,
          "log_molecules": 3.230193,
        },
        {
          "log_genes": 2.95376,
          "log_molecules": 3.23325,
        },
        {
          "log_genes": 2.804821,
          "log_molecules": 3.233757,
        },
        {
          "log_genes": 2.850646,
          "log_molecules": 3.233757,
        },
        {
          "log_genes": 2.808886,
          "log_molecules": 3.234517,
        },
        {
          "log_genes": 2.962843,
          "log_molecules": 3.235023,
        },
        {
          "log_genes": 2.83187,
          "log_molecules": 3.235276,
        },
        {
          "log_genes": 2.828015,
          "log_molecules": 3.237795,
        },
        {
          "log_genes": 2.783904,
          "log_molecules": 3.239299,
        },
        {
          "log_genes": 2.745075,
          "log_molecules": 3.240799,
        },
        {
          "log_genes": 2.89098,
          "log_molecules": 3.241795,
        },
        {
          "log_genes": 2.813581,
          "log_molecules": 3.244277,
        },
        {
          "log_genes": 1.851258,
          "log_molecules": 3.245019,
        },
        {
          "log_genes": 2.847573,
          "log_molecules": 3.245513,
        },
        {
          "log_genes": 2.826723,
          "log_molecules": 3.246252,
        },
        {
          "log_genes": 2.841985,
          "log_molecules": 3.246499,
        },
        {
          "log_genes": 2.851258,
          "log_molecules": 3.246499,
        },
        {
          "log_genes": 2.862728,
          "log_molecules": 3.247728,
        },
        {
          "log_genes": 2.936011,
          "log_molecules": 3.248709,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.254306,
        },
        {
          "log_genes": 2.900367,
          "log_molecules": 3.255031,
        },
        {
          "log_genes": 2.826075,
          "log_molecules": 3.255031,
        },
        {
          "log_genes": 2.763428,
          "log_molecules": 3.255273,
        },
        {
          "log_genes": 2.978637,
          "log_molecules": 3.256237,
        },
        {
          "log_genes": 2.924279,
          "log_molecules": 3.257679,
        },
        {
          "log_genes": 2.80618,
          "log_molecules": 3.259594,
        },
        {
          "log_genes": 2.837588,
          "log_molecules": 3.259833,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.261025,
        },
        {
          "log_genes": 2.866878,
          "log_molecules": 3.261263,
        },
        {
          "log_genes": 2.79796,
          "log_molecules": 3.262214,
        },
        {
          "log_genes": 2.901458,
          "log_molecules": 3.263873,
        },
        {
          "log_genes": 2.884229,
          "log_molecules": 3.26529,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.265761,
        },
        {
          "log_genes": 2.834421,
          "log_molecules": 3.265996,
        },
        {
          "log_genes": 2.773786,
          "log_molecules": 3.266937,
        },
        {
          "log_genes": 1.944483,
          "log_molecules": 3.267172,
        },
        {
          "log_genes": 2.825426,
          "log_molecules": 3.267875,
        },
        {
          "log_genes": 2.127105,
          "log_molecules": 3.268344,
        },
        {
          "log_genes": 2.893762,
          "log_molecules": 3.268344,
        },
        {
          "log_genes": 2.846955,
          "log_molecules": 3.269513,
        },
        {
          "log_genes": 2.817565,
          "log_molecules": 3.270213,
        },
        {
          "log_genes": 2.838219,
          "log_molecules": 3.270679,
        },
        {
          "log_genes": 2.87564,
          "log_molecules": 3.271144,
        },
        {
          "log_genes": 2.93044,
          "log_molecules": 3.271377,
        },
        {
          "log_genes": 2.952792,
          "log_molecules": 3.271609,
        },
        {
          "log_genes": 2.79796,
          "log_molecules": 3.271609,
        },
        {
          "log_genes": 2.850033,
          "log_molecules": 3.271842,
        },
        {
          "log_genes": 2.91698,
          "log_molecules": 3.271842,
        },
        {
          "log_genes": 2.757396,
          "log_molecules": 3.272306,
        },
        {
          "log_genes": 2.820858,
          "log_molecules": 3.272306,
        },
        {
          "log_genes": 2.967548,
          "log_molecules": 3.274158,
        },
        {
          "log_genes": 2.841985,
          "log_molecules": 3.274389,
        },
        {
          "log_genes": 2.771587,
          "log_molecules": 3.27462,
        },
        {
          "log_genes": 2.879669,
          "log_molecules": 3.275311,
        },
        {
          "log_genes": 2.810904,
          "log_molecules": 3.275311,
        },
        {
          "log_genes": 2.842609,
          "log_molecules": 3.275772,
        },
        {
          "log_genes": 2.815578,
          "log_molecules": 3.276692,
        },
        {
          "log_genes": 2.904174,
          "log_molecules": 3.276921,
        },
        {
          "log_genes": 2.726727,
          "log_molecules": 3.277151,
        },
        {
          "log_genes": 2.992111,
          "log_molecules": 3.27738,
        },
        {
          "log_genes": 2.949878,
          "log_molecules": 3.277609,
        },
        {
          "log_genes": 2.92737,
          "log_molecules": 3.277838,
        },
        {
          "log_genes": 2.932474,
          "log_molecules": 3.278296,
        },
        {
          "log_genes": 2.82866,
          "log_molecules": 3.279667,
        },
        {
          "log_genes": 2.819544,
          "log_molecules": 3.279895,
        },
        {
          "log_genes": 2.863917,
          "log_molecules": 3.280123,
        },
        {
          "log_genes": 2.771587,
          "log_molecules": 3.280351,
        },
        {
          "log_genes": 2.904174,
          "log_molecules": 3.280578,
        },
        {
          "log_genes": 2.848805,
          "log_molecules": 3.280806,
        },
        {
          "log_genes": 2.856124,
          "log_molecules": 3.281033,
        },
        {
          "log_genes": 2.846337,
          "log_molecules": 3.281033,
        },
      ],
    },
    {
      "format": {
        "copy": true,
        "type": "json",
      },
      "name": "linesData",
      "values": [
        {
          "log_molecules": 2.69897,
          "lower_cutoff": 2.350784,
          "upper_cutoff": 2.559059,
        },
        {
          "log_molecules": 2.906867,
          "lower_cutoff": 2.493394,
          "upper_cutoff": 2.701499,
        },
        {
          "log_molecules": 3.114763,
          "lower_cutoff": 2.635981,
          "upper_cutoff": 2.843962,
        },
        {
          "log_molecules": 3.32266,
          "lower_cutoff": 2.778545,
          "upper_cutoff": 2.986449,
        },
        {
          "log_molecules": 3.530557,
          "lower_cutoff": 2.921085,
          "upper_cutoff": 3.128959,
        },
        {
          "log_molecules": 3.738454,
          "lower_cutoff": 3.063603,
          "upper_cutoff": 3.271492,
        },
        {
          "log_molecules": 3.94635,
          "lower_cutoff": 3.206096,
          "upper_cutoff": 3.414048,
        },
        {
          "log_molecules": 4.154247,
          "lower_cutoff": 3.348567,
          "upper_cutoff": 3.556628,
        },
        {
          "log_molecules": 4.362144,
          "lower_cutoff": 3.491014,
          "upper_cutoff": 3.699231,
        },
        {
          "log_molecules": 4.570041,
          "lower_cutoff": 3.633438,
          "upper_cutoff": 3.841858,
        },
      ],
    },
  ],
  "height": 500,
  "marks": [
    {
      "clip": true,
      "encode": {
        "update": {
          "fill": {
            "value": "blue",
          },
          "opacity": {
            "value": 0.9,
          },
          "size": {
            "value": 15,
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "log_genes",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "pointsData",
      },
      "name": "marks",
      "type": "symbol",
    },
    {
      "clip": true,
      "encode": {
        "update": {
          "stroke": {
            "value": "red",
          },
          "strokeDash": {
            "value": [
              8,
              4,
            ],
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "upper_cutoff",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "linesData",
      },
      "type": "line",
    },
    {
      "clip": true,
      "encode": {
        "update": {
          "stroke": {
            "value": "red",
          },
          "strokeDash": {
            "value": [
              8,
              4,
            ],
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "lower_cutoff",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "linesData",
      },
      "type": "line",
    },
  ],
  "padding": 5,
  "scales": [
    {
      "domain": {
        "data": "pointsData",
        "field": "log_molecules",
      },
      "name": "x",
      "range": "width",
      "round": true,
      "type": "linear",
      "zero": false,
    },
    {
      "domain": [
        2.0129872168801843,
        4.179654783119816,
      ],
      "name": "y",
      "range": "height",
      "round": true,
      "type": "linear",
      "zero": false,
    },
  ],
  "title": {
    "anchor": "start",
    "color": "#000000",
    "dx": 10,
    "font": "sans-serif",
    "fontSize": 20,
    "text": "",
  },
  "width": 630,
}
`;

exports[`features vs umis plot picks correct linesData point if prediction interval is null 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega/v5.json",
  "autosize": {
    "resize": true,
    "type": "fit",
  },
  "axes": [
    {
      "domain": false,
      "grid": true,
      "gridOpacity": 0.5,
      "labelAlign": "center",
      "labelAngle": 0,
      "labelFont": "sans-serif",
      "labelFontSize": 12,
      "offset": 0,
      "orient": "bottom",
      "scale": "x",
      "tickCount": 5,
      "title": "log10 [molecule counts]",
      "titleFont": "sans-serif",
      "titleFontSize": 13,
      "zindex": 1,
    },
    {
      "domain": false,
      "grid": true,
      "gridOpacity": 0.5,
      "labelFont": "sans-serif",
      "labelFontSize": 12,
      "offset": 0,
      "orient": "left",
      "scale": "y",
      "title": "log10 [gene counts]",
      "titleFont": "sans-serif",
      "titleFontSize": 13,
      "titlePadding": 5,
      "zindex": 1,
    },
  ],
  "data": [
    {
      "format": {
        "copy": true,
        "type": "json",
      },
      "name": "pointsData",
      "transform": [
        {
          "expr": "datum['log_genes'] != null && datum['log_molecules'] != null",
          "type": "filter",
        },
        {
          "expr": "datum.log_genes >= 1.8456702168801842 && datum.log_genes <= 4.347086783119816",
          "type": "filter",
        },
      ],
      "values": [
        {
          "log_genes": 2.515874,
          "log_molecules": 2.69897,
        },
        {
          "log_genes": 2.390935,
          "log_molecules": 2.699838,
        },
        {
          "log_genes": 2.369216,
          "log_molecules": 2.701568,
        },
        {
          "log_genes": 1.544068,
          "log_molecules": 2.701568,
        },
        {
          "log_genes": 2.409933,
          "log_molecules": 2.703291,
        },
        {
          "log_genes": 2.501059,
          "log_molecules": 2.706718,
        },
        {
          "log_genes": 2.495544,
          "log_molecules": 2.71265,
        },
        {
          "log_genes": 2.376577,
          "log_molecules": 2.713491,
        },
        {
          "log_genes": 2.296665,
          "log_molecules": 2.716838,
        },
        {
          "log_genes": 2.474216,
          "log_molecules": 2.716838,
        },
        {
          "log_genes": 2.494155,
          "log_molecules": 2.723456,
        },
        {
          "log_genes": 1.633468,
          "log_molecules": 2.727541,
        },
        {
          "log_genes": 2.509203,
          "log_molecules": 2.730782,
        },
        {
          "log_genes": 2.419956,
          "log_molecules": 2.730782,
        },
        {
          "log_genes": 2.444045,
          "log_molecules": 2.733999,
        },
        {
          "log_genes": 2.348305,
          "log_molecules": 2.736397,
        },
        {
          "log_genes": 2.565848,
          "log_molecules": 2.739572,
        },
        {
          "log_genes": 2.320146,
          "log_molecules": 2.750508,
        },
        {
          "log_genes": 2.521138,
          "log_molecules": 2.750508,
        },
        {
          "log_genes": 1.968483,
          "log_molecules": 2.754348,
        },
        {
          "log_genes": 1.591065,
          "log_molecules": 2.761176,
        },
        {
          "log_genes": 2.503791,
          "log_molecules": 2.764176,
        },
        {
          "log_genes": 2.431364,
          "log_molecules": 2.768638,
        },
        {
          "log_genes": 2.459392,
          "log_molecules": 2.775974,
        },
        {
          "log_genes": 2.385606,
          "log_molecules": 2.780317,
        },
        {
          "log_genes": 2.466868,
          "log_molecules": 2.781037,
        },
        {
          "log_genes": 2.494155,
          "log_molecules": 2.782473,
        },
        {
          "log_genes": 2.491362,
          "log_molecules": 2.78533,
        },
        {
          "log_genes": 2.499687,
          "log_molecules": 2.788875,
        },
        {
          "log_genes": 2.558709,
          "log_molecules": 2.791691,
        },
        {
          "log_genes": 2.44248,
          "log_molecules": 2.79379,
        },
        {
          "log_genes": 2.603144,
          "log_molecules": 2.795185,
        },
        {
          "log_genes": 1.94939,
          "log_molecules": 2.795185,
        },
        {
          "log_genes": 2.555094,
          "log_molecules": 2.797268,
        },
        {
          "log_genes": 2.448706,
          "log_molecules": 2.798651,
        },
        {
          "log_genes": 2.440909,
          "log_molecules": 2.805501,
        },
        {
          "log_genes": 2.465383,
          "log_molecules": 2.806858,
        },
        {
          "log_genes": 2.445604,
          "log_molecules": 2.810904,
        },
        {
          "log_genes": 2.478566,
          "log_molecules": 2.812913,
        },
        {
          "log_genes": 2.570543,
          "log_molecules": 2.813581,
        },
        {
          "log_genes": 2.603144,
          "log_molecules": 2.818885,
        },
        {
          "log_genes": 2.40654,
          "log_molecules": 2.826723,
        },
        {
          "log_genes": 2.513218,
          "log_molecules": 2.82866,
        },
        {
          "log_genes": 2.414973,
          "log_molecules": 2.830589,
        },
        {
          "log_genes": 1.845098,
          "log_molecules": 2.83123,
        },
        {
          "log_genes": 2.463893,
          "log_molecules": 2.834421,
        },
        {
          "log_genes": 1.792392,
          "log_molecules": 2.835691,
        },
        {
          "log_genes": 2.459392,
          "log_molecules": 2.835691,
        },
        {
          "log_genes": 1.755875,
          "log_molecules": 2.839478,
        },
        {
          "log_genes": 1.770852,
          "log_molecules": 2.841985,
        },
        {
          "log_genes": 2.565848,
          "log_molecules": 2.844477,
        },
        {
          "log_genes": 1.799341,
          "log_molecules": 2.844477,
        },
        {
          "log_genes": 2.563481,
          "log_molecules": 2.845098,
        },
        {
          "log_genes": 1.732394,
          "log_molecules": 2.846337,
        },
        {
          "log_genes": 2.462398,
          "log_molecules": 2.850646,
        },
        {
          "log_genes": 1.643453,
          "log_molecules": 2.863323,
        },
        {
          "log_genes": 2.617,
          "log_molecules": 2.865104,
        },
        {
          "log_genes": 2.480007,
          "log_molecules": 2.867467,
        },
        {
          "log_genes": 2.372912,
          "log_molecules": 2.868644,
        },
        {
          "log_genes": 2.481443,
          "log_molecules": 2.869818,
        },
        {
          "log_genes": 2.647383,
          "log_molecules": 2.877947,
        },
        {
          "log_genes": 2.567026,
          "log_molecules": 2.880242,
        },
        {
          "log_genes": 2.582063,
          "log_molecules": 2.883093,
        },
        {
          "log_genes": 1.812913,
          "log_molecules": 2.883093,
        },
        {
          "log_genes": 2.434569,
          "log_molecules": 2.884795,
        },
        {
          "log_genes": 2.668386,
          "log_molecules": 2.888741,
        },
        {
          "log_genes": 2.716838,
          "log_molecules": 2.893762,
        },
        {
          "log_genes": 2.686636,
          "log_molecules": 2.89487,
        },
        {
          "log_genes": 2.478566,
          "log_molecules": 2.895423,
        },
        {
          "log_genes": 2.638489,
          "log_molecules": 2.905256,
        },
        {
          "log_genes": 2.553883,
          "log_molecules": 2.910091,
        },
        {
          "log_genes": 2.539076,
          "log_molecules": 2.91169,
        },
        {
          "log_genes": 1.913814,
          "log_molecules": 2.91698,
        },
        {
          "log_genes": 2.466868,
          "log_molecules": 2.917506,
        },
        {
          "log_genes": 2.683047,
          "log_molecules": 2.91803,
        },
        {
          "log_genes": 2.621176,
          "log_molecules": 2.924279,
        },
        {
          "log_genes": 2.70757,
          "log_molecules": 2.924796,
        },
        {
          "log_genes": 2.583199,
          "log_molecules": 2.925312,
        },
        {
          "log_genes": 2.752816,
          "log_molecules": 2.933487,
        },
        {
          "log_genes": 2.643453,
          "log_molecules": 2.935003,
        },
        {
          "log_genes": 2.547775,
          "log_molecules": 2.942504,
        },
        {
          "log_genes": 2.704151,
          "log_molecules": 2.950851,
        },
        {
          "log_genes": 2.136721,
          "log_molecules": 2.952792,
        },
        {
          "log_genes": 2.518514,
          "log_molecules": 2.953276,
        },
        {
          "log_genes": 2.592177,
          "log_molecules": 2.956649,
        },
        {
          "log_genes": 2.781037,
          "log_molecules": 2.956649,
        },
        {
          "log_genes": 2.722634,
          "log_molecules": 2.957607,
        },
        {
          "log_genes": 2.572872,
          "log_molecules": 2.959041,
        },
        {
          "log_genes": 1.892095,
          "log_molecules": 2.961421,
        },
        {
          "log_genes": 2.749736,
          "log_molecules": 2.965202,
        },
        {
          "log_genes": 1.897627,
          "log_molecules": 2.980458,
        },
        {
          "log_genes": 2.09691,
          "log_molecules": 2.984527,
        },
        {
          "log_genes": 2.726727,
          "log_molecules": 2.989005,
        },
        {
          "log_genes": 2.716003,
          "log_molecules": 2.992554,
        },
        {
          "log_genes": 2.729974,
          "log_molecules": 3.001734,
        },
        {
          "log_genes": 2.7348,
          "log_molecules": 3.004751,
        },
        {
          "log_genes": 2.744293,
          "log_molecules": 3.009876,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.01494,
        },
        {
          "log_genes": 2.646404,
          "log_molecules": 3.017033,
        },
        {
          "log_genes": 1.832509,
          "log_molecules": 3.017868,
        },
        {
          "log_genes": 1.826075,
          "log_molecules": 3.018284,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.0306,
        },
        {
          "log_genes": 2.716838,
          "log_molecules": 3.033826,
        },
        {
          "log_genes": 2.761176,
          "log_molecules": 3.037825,
        },
        {
          "log_genes": 1.732394,
          "log_molecules": 3.041393,
        },
        {
          "log_genes": 1.653213,
          "log_molecules": 3.043362,
        },
        {
          "log_genes": 1.69897,
          "log_molecules": 3.044932,
        },
        {
          "log_genes": 2.751279,
          "log_molecules": 3.045714,
        },
        {
          "log_genes": 2.817565,
          "log_molecules": 3.046105,
        },
        {
          "log_genes": 2.784617,
          "log_molecules": 3.050766,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.052694,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.057286,
        },
        {
          "log_genes": 2.814248,
          "log_molecules": 3.057286,
        },
        {
          "log_genes": 1.838849,
          "log_molecules": 3.061075,
        },
        {
          "log_genes": 2.724276,
          "log_molecules": 3.062206,
        },
        {
          "log_genes": 2.733999,
          "log_molecules": 3.062958,
        },
        {
          "log_genes": 1.716003,
          "log_molecules": 3.065206,
        },
        {
          "log_genes": 2.570543,
          "log_molecules": 3.06558,
        },
        {
          "log_genes": 2.781037,
          "log_molecules": 3.065953,
        },
        {
          "log_genes": 2.710117,
          "log_molecules": 3.072985,
        },
        {
          "log_genes": 2.738781,
          "log_molecules": 3.078457,
        },
        {
          "log_genes": 2.870989,
          "log_molecules": 3.079543,
        },
        {
          "log_genes": 2.806858,
          "log_molecules": 3.079543,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.084934,
        },
        {
          "log_genes": 2.848189,
          "log_molecules": 3.091315,
        },
        {
          "log_genes": 1.886491,
          "log_molecules": 3.094122,
        },
        {
          "log_genes": 2.790285,
          "log_molecules": 3.097604,
        },
        {
          "log_genes": 2.802774,
          "log_molecules": 3.098298,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.108565,
        },
        {
          "log_genes": 2.807535,
          "log_molecules": 3.109916,
        },
        {
          "log_genes": 2.835056,
          "log_molecules": 3.11294,
        },
        {
          "log_genes": 2.782473,
          "log_molecules": 3.117603,
        },
        {
          "log_genes": 2.826075,
          "log_molecules": 3.120245,
        },
        {
          "log_genes": 1.78533,
          "log_molecules": 3.123525,
        },
        {
          "log_genes": 2.694605,
          "log_molecules": 3.123852,
        },
        {
          "log_genes": 2.727541,
          "log_molecules": 3.125481,
        },
        {
          "log_genes": 2.798651,
          "log_molecules": 3.125806,
        },
        {
          "log_genes": 2.797268,
          "log_molecules": 3.127105,
        },
        {
          "log_genes": 2.89098,
          "log_molecules": 3.130655,
        },
        {
          "log_genes": 2.701568,
          "log_molecules": 3.134814,
        },
        {
          "log_genes": 2.755875,
          "log_molecules": 3.136721,
        },
        {
          "log_genes": 2.824776,
          "log_molecules": 3.136721,
        },
        {
          "log_genes": 2.830589,
          "log_molecules": 3.137354,
        },
        {
          "log_genes": 1.633468,
          "log_molecules": 3.138303,
        },
        {
          "log_genes": 2.876795,
          "log_molecules": 3.139249,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.140508,
        },
        {
          "log_genes": 1.643453,
          "log_molecules": 3.140508,
        },
        {
          "log_genes": 2.778874,
          "log_molecules": 3.140822,
        },
        {
          "log_genes": 2.872739,
          "log_molecules": 3.144885,
        },
        {
          "log_genes": 2.804139,
          "log_molecules": 3.145196,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.145818,
        },
        {
          "log_genes": 2.877371,
          "log_molecules": 3.146128,
        },
        {
          "log_genes": 2.762679,
          "log_molecules": 3.147367,
        },
        {
          "log_genes": 2.779596,
          "log_molecules": 3.150142,
        },
        {
          "log_genes": 2.717671,
          "log_molecules": 3.15137,
        },
        {
          "log_genes": 2.856124,
          "log_molecules": 3.1529,
        },
        {
          "log_genes": 2.865696,
          "log_molecules": 3.15351,
        },
        {
          "log_genes": 2.732394,
          "log_molecules": 3.157154,
        },
        {
          "log_genes": 2.71433,
          "log_molecules": 3.161068,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.162266,
        },
        {
          "log_genes": 2.737987,
          "log_molecules": 3.163161,
        },
        {
          "log_genes": 2.848189,
          "log_molecules": 3.165244,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.165838,
        },
        {
          "log_genes": 2.804139,
          "log_molecules": 3.165838,
        },
        {
          "log_genes": 1.60206,
          "log_molecules": 3.167908,
        },
        {
          "log_genes": 2.669317,
          "log_molecules": 3.169674,
        },
        {
          "log_genes": 2.810904,
          "log_molecules": 3.171141,
        },
        {
          "log_genes": 2.906874,
          "log_molecules": 3.171434,
        },
        {
          "log_genes": 2.718502,
          "log_molecules": 3.174641,
        },
        {
          "log_genes": 2.857935,
          "log_molecules": 3.176381,
        },
        {
          "log_genes": 2.780317,
          "log_molecules": 3.176959,
        },
        {
          "log_genes": 2.708421,
          "log_molecules": 3.179264,
        },
        {
          "log_genes": 2.700704,
          "log_molecules": 3.179839,
        },
        {
          "log_genes": 2.873321,
          "log_molecules": 3.180699,
        },
        {
          "log_genes": 2.829947,
          "log_molecules": 3.183555,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.186108,
        },
        {
          "log_genes": 2.836957,
          "log_molecules": 3.186108,
        },
        {
          "log_genes": 2.943,
          "log_molecules": 3.186956,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.187521,
        },
        {
          "log_genes": 2.935507,
          "log_molecules": 3.18949,
        },
        {
          "log_genes": 2.833784,
          "log_molecules": 3.18949,
        },
        {
          "log_genes": 2.78533,
          "log_molecules": 3.190332,
        },
        {
          "log_genes": 2.854913,
          "log_molecules": 3.190612,
        },
        {
          "log_genes": 2.857332,
          "log_molecules": 3.191451,
        },
        {
          "log_genes": 2.751279,
          "log_molecules": 3.192289,
        },
        {
          "log_genes": 2.854306,
          "log_molecules": 3.192567,
        },
        {
          "log_genes": 2.803457,
          "log_molecules": 3.193403,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.1959,
        },
        {
          "log_genes": 2.750508,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.83123,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.835056,
          "log_molecules": 3.196176,
        },
        {
          "log_genes": 2.850033,
          "log_molecules": 3.196453,
        },
        {
          "log_genes": 2.718502,
          "log_molecules": 3.197832,
        },
        {
          "log_genes": 2.872156,
          "log_molecules": 3.198382,
        },
        {
          "log_genes": 2.778874,
          "log_molecules": 3.199206,
        },
        {
          "log_genes": 2.775974,
          "log_molecules": 3.201397,
        },
        {
          "log_genes": 2.7348,
          "log_molecules": 3.201943,
        },
        {
          "log_genes": 2.846337,
          "log_molecules": 3.201943,
        },
        {
          "log_genes": 2.903633,
          "log_molecules": 3.202488,
        },
        {
          "log_genes": 1.826075,
          "log_molecules": 3.202488,
        },
        {
          "log_genes": 2.756636,
          "log_molecules": 3.203033,
        },
        {
          "log_genes": 2.881955,
          "log_molecules": 3.205204,
        },
        {
          "log_genes": 2.814248,
          "log_molecules": 3.205204,
        },
        {
          "log_genes": 2.92737,
          "log_molecules": 3.206286,
        },
        {
          "log_genes": 2.816904,
          "log_molecules": 3.206826,
        },
        {
          "log_genes": 2.764176,
          "log_molecules": 3.207904,
        },
        {
          "log_genes": 2.861534,
          "log_molecules": 3.209515,
        },
        {
          "log_genes": 2.767156,
          "log_molecules": 3.209783,
        },
        {
          "log_genes": 2.778151,
          "log_molecules": 3.209783,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.21272,
        },
        {
          "log_genes": 2.750508,
          "log_molecules": 3.213252,
        },
        {
          "log_genes": 2.761928,
          "log_molecules": 3.213518,
        },
        {
          "log_genes": 2.855519,
          "log_molecules": 3.214314,
        },
        {
          "log_genes": 2.863917,
          "log_molecules": 3.214579,
        },
        {
          "log_genes": 2.840106,
          "log_molecules": 3.215902,
        },
        {
          "log_genes": 2.775974,
          "log_molecules": 3.21643,
        },
        {
          "log_genes": 2.818885,
          "log_molecules": 3.219323,
        },
        {
          "log_genes": 2.834421,
          "log_molecules": 3.22037,
        },
        {
          "log_genes": 2.760422,
          "log_molecules": 3.220892,
        },
        {
          "log_genes": 2.863323,
          "log_molecules": 3.221414,
        },
        {
          "log_genes": 2.720986,
          "log_molecules": 3.221675,
        },
        {
          "log_genes": 1.812913,
          "log_molecules": 3.222456,
        },
        {
          "log_genes": 2.892651,
          "log_molecules": 3.222456,
        },
        {
          "log_genes": 2.947924,
          "log_molecules": 3.223236,
        },
        {
          "log_genes": 1.94939,
          "log_molecules": 3.224274,
        },
        {
          "log_genes": 2.963788,
          "log_molecules": 3.224533,
        },
        {
          "log_genes": 2.885926,
          "log_molecules": 3.225826,
        },
        {
          "log_genes": 2.818885,
          "log_molecules": 3.2284,
        },
        {
          "log_genes": 2.885361,
          "log_molecules": 3.228913,
        },
        {
          "log_genes": 2.733999,
          "log_molecules": 3.230193,
        },
        {
          "log_genes": 2.790988,
          "log_molecules": 3.230193,
        },
        {
          "log_genes": 2.95376,
          "log_molecules": 3.23325,
        },
        {
          "log_genes": 2.804821,
          "log_molecules": 3.233757,
        },
        {
          "log_genes": 2.850646,
          "log_molecules": 3.233757,
        },
        {
          "log_genes": 2.808886,
          "log_molecules": 3.234517,
        },
        {
          "log_genes": 2.962843,
          "log_molecules": 3.235023,
        },
        {
          "log_genes": 2.83187,
          "log_molecules": 3.235276,
        },
        {
          "log_genes": 2.828015,
          "log_molecules": 3.237795,
        },
        {
          "log_genes": 2.783904,
          "log_molecules": 3.239299,
        },
        {
          "log_genes": 2.745075,
          "log_molecules": 3.240799,
        },
        {
          "log_genes": 2.89098,
          "log_molecules": 3.241795,
        },
        {
          "log_genes": 2.813581,
          "log_molecules": 3.244277,
        },
        {
          "log_genes": 1.851258,
          "log_molecules": 3.245019,
        },
        {
          "log_genes": 2.847573,
          "log_molecules": 3.245513,
        },
        {
          "log_genes": 2.826723,
          "log_molecules": 3.246252,
        },
        {
          "log_genes": 2.841985,
          "log_molecules": 3.246499,
        },
        {
          "log_genes": 2.851258,
          "log_molecules": 3.246499,
        },
        {
          "log_genes": 2.862728,
          "log_molecules": 3.247728,
        },
        {
          "log_genes": 2.936011,
          "log_molecules": 3.248709,
        },
        {
          "log_genes": 2.786751,
          "log_molecules": 3.254306,
        },
        {
          "log_genes": 2.900367,
          "log_molecules": 3.255031,
        },
        {
          "log_genes": 2.826075,
          "log_molecules": 3.255031,
        },
        {
          "log_genes": 2.763428,
          "log_molecules": 3.255273,
        },
        {
          "log_genes": 2.978637,
          "log_molecules": 3.256237,
        },
        {
          "log_genes": 2.924279,
          "log_molecules": 3.257679,
        },
        {
          "log_genes": 2.80618,
          "log_molecules": 3.259594,
        },
        {
          "log_genes": 2.837588,
          "log_molecules": 3.259833,
        },
        {
          "log_genes": 2.838849,
          "log_molecules": 3.261025,
        },
        {
          "log_genes": 2.866878,
          "log_molecules": 3.261263,
        },
        {
          "log_genes": 2.79796,
          "log_molecules": 3.262214,
        },
        {
          "log_genes": 2.901458,
          "log_molecules": 3.263873,
        },
        {
          "log_genes": 2.884229,
          "log_molecules": 3.26529,
        },
        {
          "log_genes": 2.799341,
          "log_molecules": 3.265761,
        },
        {
          "log_genes": 2.834421,
          "log_molecules": 3.265996,
        },
        {
          "log_genes": 2.773786,
          "log_molecules": 3.266937,
        },
        {
          "log_genes": 1.944483,
          "log_molecules": 3.267172,
        },
        {
          "log_genes": 2.825426,
          "log_molecules": 3.267875,
        },
        {
          "log_genes": 2.127105,
          "log_molecules": 3.268344,
        },
        {
          "log_genes": 2.893762,
          "log_molecules": 3.268344,
        },
        {
          "log_genes": 2.846955,
          "log_molecules": 3.269513,
        },
        {
          "log_genes": 2.817565,
          "log_molecules": 3.270213,
        },
        {
          "log_genes": 2.838219,
          "log_molecules": 3.270679,
        },
        {
          "log_genes": 2.87564,
          "log_molecules": 3.271144,
        },
        {
          "log_genes": 2.93044,
          "log_molecules": 3.271377,
        },
        {
          "log_genes": 2.952792,
          "log_molecules": 3.271609,
        },
        {
          "log_genes": 2.79796,
          "log_molecules": 3.271609,
        },
        {
          "log_genes": 2.850033,
          "log_molecules": 3.271842,
        },
        {
          "log_genes": 2.91698,
          "log_molecules": 3.271842,
        },
        {
          "log_genes": 2.757396,
          "log_molecules": 3.272306,
        },
        {
          "log_genes": 2.820858,
          "log_molecules": 3.272306,
        },
        {
          "log_genes": 2.967548,
          "log_molecules": 3.274158,
        },
        {
          "log_genes": 2.841985,
          "log_molecules": 3.274389,
        },
        {
          "log_genes": 2.771587,
          "log_molecules": 3.27462,
        },
        {
          "log_genes": 2.879669,
          "log_molecules": 3.275311,
        },
        {
          "log_genes": 2.810904,
          "log_molecules": 3.275311,
        },
        {
          "log_genes": 2.842609,
          "log_molecules": 3.275772,
        },
        {
          "log_genes": 2.815578,
          "log_molecules": 3.276692,
        },
        {
          "log_genes": 2.904174,
          "log_molecules": 3.276921,
        },
        {
          "log_genes": 2.726727,
          "log_molecules": 3.277151,
        },
        {
          "log_genes": 2.992111,
          "log_molecules": 3.27738,
        },
        {
          "log_genes": 2.949878,
          "log_molecules": 3.277609,
        },
        {
          "log_genes": 2.92737,
          "log_molecules": 3.277838,
        },
        {
          "log_genes": 2.932474,
          "log_molecules": 3.278296,
        },
        {
          "log_genes": 2.82866,
          "log_molecules": 3.279667,
        },
        {
          "log_genes": 2.819544,
          "log_molecules": 3.279895,
        },
        {
          "log_genes": 2.863917,
          "log_molecules": 3.280123,
        },
        {
          "log_genes": 2.771587,
          "log_molecules": 3.280351,
        },
        {
          "log_genes": 2.904174,
          "log_molecules": 3.280578,
        },
        {
          "log_genes": 2.848805,
          "log_molecules": 3.280806,
        },
        {
          "log_genes": 2.856124,
          "log_molecules": 3.281033,
        },
        {
          "log_genes": 2.846337,
          "log_molecules": 3.281033,
        },
      ],
    },
    {
      "format": {
        "copy": true,
        "type": "json",
      },
      "name": "linesData",
      "values": [
        {
          "log_molecules": 2.69897,
          "lower_cutoff": 2.183467,
          "upper_cutoff": 2.726376,
        },
        {
          "log_molecules": 2.906867,
          "lower_cutoff": 2.326215,
          "upper_cutoff": 2.868679,
        },
        {
          "log_molecules": 3.114763,
          "lower_cutoff": 2.468901,
          "upper_cutoff": 3.011043,
        },
        {
          "log_molecules": 3.32266,
          "lower_cutoff": 2.611527,
          "upper_cutoff": 3.153467,
        },
        {
          "log_molecules": 3.530557,
          "lower_cutoff": 2.754092,
          "upper_cutoff": 3.295952,
        },
        {
          "log_molecules": 3.738454,
          "lower_cutoff": 2.896596,
          "upper_cutoff": 3.438498,
        },
        {
          "log_molecules": 3.94635,
          "lower_cutoff": 3.039039,
          "upper_cutoff": 3.581105,
        },
        {
          "log_molecules": 4.154247,
          "lower_cutoff": 3.181422,
          "upper_cutoff": 3.723773,
        },
        {
          "log_molecules": 4.362144,
          "lower_cutoff": 3.323744,
          "upper_cutoff": 3.866501,
        },
        {
          "log_molecules": 4.570041,
          "lower_cutoff": 3.466005,
          "upper_cutoff": 4.00929,
        },
      ],
    },
  ],
  "height": 500,
  "marks": [
    {
      "clip": true,
      "encode": {
        "update": {
          "fill": {
            "value": "blue",
          },
          "opacity": {
            "value": 0.9,
          },
          "size": {
            "value": 15,
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "log_genes",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "pointsData",
      },
      "name": "marks",
      "type": "symbol",
    },
    {
      "clip": true,
      "encode": {
        "update": {
          "stroke": {
            "value": "red",
          },
          "strokeDash": {
            "value": [
              8,
              4,
            ],
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "upper_cutoff",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "linesData",
      },
      "type": "line",
    },
    {
      "clip": true,
      "encode": {
        "update": {
          "stroke": {
            "value": "red",
          },
          "strokeDash": {
            "value": [
              8,
              4,
            ],
          },
          "strokeWidth": {
            "value": 2,
          },
          "x": {
            "field": "log_molecules",
            "scale": "x",
          },
          "y": {
            "field": "lower_cutoff",
            "scale": "y",
          },
        },
      },
      "from": {
        "data": "linesData",
      },
      "type": "line",
    },
  ],
  "padding": 5,
  "scales": [
    {
      "domain": {
        "data": "pointsData",
        "field": "log_molecules",
      },
      "name": "x",
      "range": "width",
      "round": true,
      "type": "linear",
      "zero": false,
    },
    {
      "domain": [
        1.8456702168801842,
        4.347086783119816,
      ],
      "name": "y",
      "range": "height",
      "round": true,
      "type": "linear",
      "zero": false,
    },
  ],
  "title": {
    "anchor": "start",
    "color": "#000000",
    "dx": 10,
    "font": "sans-serif",
    "fontSize": 20,
    "text": "",
  },
  "width": 630,
}
`;
